# nullout

./: .gitignore  CHANGELOG.md  README.es.md  README.fr.md  README.hi.md  README.it.md  README.ja.md  README.md  README.pt-BR.md  README.zh.md  SCORECARD.md  SECURITY.md  SHIP_GATE.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: Treatment.md
scripts/: create_fixtures.py  shipcheck.ps1
site/: astro.config.mjs  package-lock.json
site/src/: site-config.ts
site/src/content/docs/handbook/: configuration.md  getting-started.md  index.md  mcp-tools.md  safety-model.md
src/nullout/: __init__.py  config.py  errors.py  hazards.py  models.py  restart_manager.py  server.py  store.py  tokens.py  tools.py  win_identity.py  win_paths.py
tests/: conftest.py  test_dir_empty_only.py  test_reparse_policy.py  test_restart_manager.py  test_root_confinement.py  test_toctou_identity.py  test_tokens.py
