[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nullout-mcp"
version = "1.1.0"
description = "MCP server that finds and safely removes undeletable files on Windows"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "mcp-tool-shop", email = "64996768+mcp-tool-shop@users.noreply.github.com" }
]
keywords = ["mcp", "windows", "filesystem", "cleanup", "reserved-names", "nullout"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Filesystems",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/mcp-tool-shop-org/nullout"
Repository = "https://github.com/mcp-tool-shop-org/nullout"
Issues = "https://github.com/mcp-tool-shop-org/nullout/issues"

[project.scripts]
nullout-mcp = "nullout.server:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/nullout"]

[tool.pytest.ini_options]
testpaths = ["tests"]
